Fixed immutable list issue